# kyusa-backend

./: .gitignore  README.md  api.py  build.sh  main.py  pyproject.toml  render.yaml  requirements.txt  test_email.py  tree.py  vercel.json
api_docs/: doc_01_general_overview.md  doc_02_client_documentation.md  doc_03_comprehensive_role_flows.md  doc_04_provider_availability.md  doc_05_availability_and_completion.md  doc_06_client_reviews.md  doc_07_endpoint_reference_summary.md  doc_08_provider_ops_and_reviews.md  doc_09_earnings_and_payouts.md  doc_10_client_favorites.md  doc_11_provider_analytics.md  doc_12_email_notifications.md  doc_13_system_settings.md  doc_14_dispute_resolution.md  doc_15_authentication_deep_dive.md  summary.md
apps/core/: admin.py  apps.py  models.py  utils.py
apps/core/migrations/: 0001_initial.py  0002_notification.py  0003_role.py  0004_providerprofile_availability.py  0005_availabilityexception_servicecategory.py  0006_service.py  0007_clientprofile_booking_review_favorite.py  0008_paymentmethod_paymenttransaction.py  0009_commissionrule.py  0010_payout_providerearnings.py  0011_systemsetting_auditlog_dispute_disputeevidence.py  0012_refreshtoken.py  0013_alter_auditlog_id_alter_auditlog_object_id_and_more.py  0014_booking_metadata.py  0015_alter_booking_metadata.py
apps/core/static/css/: admin-override.css
config/: settings.py
documentation/: auth.md  doc1.md  doc10.md  doc11.md  doc12.md  doc13.md  doc14.md  doc2.md  doc3.md  doc4.md  doc5.md  doc6.md  doc7.md  doc8.md  doc9.md  summary.md  summary_final.md
