[project]
name = "kyusa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "django-filter>=25.2",
    "django-unfold>=0.85.0",
    "cuid2>=2.0.1",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.9.0",
    "uvicorn>=0.46.0",
    "fastapi>=0.136.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.27",
    "pydantic[email]>=2.13.3",
    "asgiref>=3.11.1",
    "django-anymail>=15.0",
    "pillow>=12.2.0",
]
